# EVO-HAW-SoSe25

./: .env.public  .gitignore  README.md  pyproject.toml
src/DroneSwarmPathOpti/: main.py
src/DroneSwarmPathOpti/config/: __init__.py  config_manager.py
src/DroneSwarmPathOpti/logging/: __init__.py  logger.py
src/DroneSwarmPathOpti/optimization/: __init__.py  fitness.py  particle.py  pso.py
src/DroneSwarmPathOpti/project_logger/: logger.py  module_source_enum.py
src/DroneSwarmPathOpti/simulation/: __init__.py  collision.py  environment.py
src/DroneSwarmPathOpti/simulation/environment_objects/: __init__.py  drone.py  environment.py  map_object.py
src/DroneSwarmPathOpti/simulation/environment_utils/: __init__.py  graph.py  spline.py
src/DroneSwarmPathOpti/visualization/: plot.py
